fix for logo not being centered on mobile

--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -4,6 +4,7 @@
   margin-right: -20px;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
 
   @include media-breakpoint-up(sm) {
     height: calc(100vh - 60px);
